Added 14 days Gym pass offer to Callout section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Callout -->
     <section>
         <h2>The pain you feel today will be the strength you feel tomorow.</h2>
+        <p>So what you waiting for? Sign up and try 14 days free Gym pass.</p>
     </section>
     <!-- /. Callout -->
 
