Added Sign Up! button to Callout section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <section>
         <h2>The pain you feel today will be the strength you feel tomorow.</h2>
         <p>So what you waiting for? Sign up and try 14 days free Gym pass.</p>
+        <button>Sign Up!</button>
     </section>
     <!-- /. Callout -->
 
