Added short paragrahp to timetable section.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Timetable -->
     <section>
         <h2>Timetable</h2>
-        
+        <p>No pain no Gain</p>
     </section>
     <!-- /. Timetable -->
 
