Added Timetable headings

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <section>
         <h2>Timetable</h2>
         <p>No pain no Gain</p>
+        <h5>Cardio Muscule Yoga Zumba</h5>
     </section>
     <!-- /. Timetable -->
 
