Added timetable data

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h2>Timetable</h2>
         <p>No pain no Gain</p>
         <h5>Cardio Muscule Yoga Zumba</h5>
+        <p>7 days per week, classes starting 9am, 12am, 3pm, 6pm.</p>
     </section>
     <!-- /. Timetable -->
 
