Added information about Pesonal trainers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
     <!-- Personal trainer -->
     <section>
-
+        <h5>Lioneli Bruyne</h5>
+        <p>Personal trainer</p>
+        <p>contact here: social links</p>
     </section>
     <!-- /. Personal trainer -->
     
