Added heading for personal trainer section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <!-- Personal trainer -->
     <section>
+        <h2>Personal Trainers</h2>
         <h5>Lioneli Bruyne</h5>
         <p>Personal trainer</p>
         <p>contact here: social links</p>
