Added paragrahp to the trainers section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <!-- Personal trainer -->
     <section>
         <h2>Personal Trainers</h2>
+        <p>Personal trainer can develop your work routine, meal plan and overall strategy for achieving your goal.</p>
         <h5>Lioneli Bruyne</h5>
         <p>Personal trainer</p>
         <p>contact here: social links</p>
