--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym | Go Home or Go Hard</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -15,7 +16,7 @@
     </header>
 
     <!-- Callout -->
-    <section>
+    <section class="callout">
         <h2>The pain you feel today will be the strength you feel tomorow.</h2>
         <p>So what you waiting for? Sign up and try 14 days free Gym pass.</p>
         <button>Sign Up!</button>
