--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym | Go Home or Go Hard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -16,11 +17,17 @@
     </header>
 
     <!-- Callout -->
-    <section class="callout">
-        <h2>The pain you feel today will be the strength you feel tomorow.</h2>
-        <p>So what you waiting for? Sign up and try 14 days free Gym pass.</p>
-        <button>Sign Up!</button>
-    </section>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <section class="callout">
+                    <h2>The pain you feel today will be the strength you feel tomorow.</h2>
+                    <p>So what you waiting for? Sign up and try 14 days free Gym pass.</p>
+                    <button>Sign Up!</button>
+                </section>
+            </div>
+        </div>
+    </div>
     <!-- /. Callout -->
 
     <!-- Timetable -->
@@ -39,16 +46,16 @@
         <h5>1 Year Membership</h5>
         <p>€300.00 / year</p>
         <hr>
-         <h5>6 Months Membership</h5>
+        <h5>6 Months Membership</h5>
         <p>€200.00 / months</p>
         <hr>
-         <h5>3 Months Membership</h5>
+        <h5>3 Months Membership</h5>
         <p>€100.00 / months</p>
         <hr>
-         <h5>Monthly Membership</h5>
+        <h5>Monthly Membership</h5>
         <p>€30.00 / month</p>
         <hr>
-         <h5>Monthly Couples Membership</h5>
+        <h5>Monthly Couples Membership</h5>
         <p>€50.00 / month</p>
         <hr>
     </section>
